--- a/src/components/05-components/SapphireCare_Patterns/card-icon-top-text-bottom/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-icon-top-text-bottom/_index.scss
@@ -1,6 +1,8 @@
 /* CardIconTopTextBottom */
+@use '~Settings/colors';
+
 .card-icon-top {
-  background: #fff;
+  background: colors.$sapphire-white;
   padding: 40px 0;
   text-align: center;
 }
