--- a/src/components/05-components/SapphireCare_Patterns/card-two-cols/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-two-cols/_index.scss
@@ -1,7 +1,10 @@
 /* CardTwoCols */
+@use '~Settings/colors';
+
 .card-two-cols {
-  background-color: #fff;
-  border-color: #eee;
+  background-color: colors.$sapphire-white;
+  ;
+  border-color: colors.$light-grey;
   border-radius: 4px;
   border-width: 1px;
   display: table;
@@ -121,18 +124,18 @@
 }
 
 body:not(.is-rtl) .card-two-cols.border.border-left:not(.border-all) {
-  border-bottom-color: #eee;
+  border-bottom-color: colors.$light-grey;
   border-left-width: 5px;
-  border-right-color: #eee;
-  border-top-color: #eee;
+  border-right-color: colors.$light-grey;
+  border-top-color: colors.$light-grey;
 }
 
 body.is-rtl .card-two-cols.border.border-left {
-  border-bottom-color: #eee;
-  border-left-color: #eee;
+  border-bottom-color: colors.$light-grey;
+  border-left-color: colors.$light-grey;
   border-left-width: 0;
   border-right-width: 4px;
-  border-top-color: #eee;
+  border-top-color: colors.$light-grey;
 }
 
 .card-two-cols.border.border-all {
@@ -169,7 +172,7 @@ body.is-rtl .card-two-cols.border.border-left {
 }
 
 .card-two-cols-col-left.separator-border:after {
-  background-color: #dedede;
+  background-color: colors.$light-grey;
   bottom: 4px;
   content: "";
   display: block;
@@ -186,7 +189,7 @@ body.is-rtl .card-two-cols.border.border-left {
 }
 
 .card-two-cols-col-left img {
-  border: 1px solid #f5f5f5;
+  border: 1px solid colors.$light-grey;
   border-radius: 4px;
 }
 
@@ -218,7 +221,7 @@ body.is-rtl .card-two-cols.border.border-left {
 }
 
 .card-two-cols.border-top {
-  border-top: 1px solid #dedede;
+  border-top: 1px solid colors.$light-grey;
 }
 
 .popup-content .card-two-cols.split-half-columns {
