--- a/src/components/05-components/Silk_Blocks/badge/_index.scss
+++ b/src/components/05-components/Silk_Blocks/badge/_index.scss
@@ -1,4 +1,7 @@
 /* Badge */
+
+@use '~Settings/colors';
+
 .badge {
   border-radius: 100px;
   font-size: 14px;
@@ -7,6 +10,6 @@
 }
 
 .badge.background-white {
-  color: #00BFA5
+  color: colors.$regular-alpha
     /*primary-color*/
 }
