--- a/src/components/05-components/Silk_Blocks/carousel/_index.scss
+++ b/src/components/05-components/Silk_Blocks/carousel/_index.scss
@@ -1,6 +1,8 @@
 /* Carousel */
+@use '~Settings/colors';
+
 .owl-theme .owl-nav [class*="owl-"] {
-  color: #fff;
+  color: colors.$sapphire-white;
   font-size: 34px;
   -webkit-transform: translateY(-30px);
   -ms-transform: translateY(-30px);
@@ -8,6 +10,6 @@
 }
 
 .carousel .carousel-navigation i {
-  color: #fff;
+  color: colors.$sapphire-white;
   font-size: 36px;
 }
