--- a/src/components/05-components/Silk_Blocks/tooltip/_index.scss
+++ b/src/components/05-components/Silk_Blocks/tooltip/_index.scss
@@ -1,25 +1,26 @@
 /* Tooltip */
+@use '~Settings/colors';
+
 .tooltip-wrapper {
-  background-color: #fff;
-  -webkit-box-shadow: 0 2px 24px 0 rgba(0, 0, 0, .32);
+  background-color: colors.$sapphire-white;
   box-shadow: 0 2px 24px 0 rgba(0, 0, 0, .32);
-  color: #333;
+  color: colors.$dark-;
   font-size: 14px;
   padding: 5px 15px;
 }
 
 .tooltip-wrapper.top:after {
-  border-top-color: #fff;
+  border-top-color: colors.$sapphire-white;
 }
 
 .tooltip-wrapper.bottom:after {
-  border-bottom-color: #fff;
+  border-bottom-color: colors.$sapphire-white;
 }
 
 .tooltip-wrapper.right:after {
-  border-right-color: #fff;
+  border-right-color: colors.$sapphire-white;
 }
 
 .tooltip-wrapper.left:after {
-  border-left-color: #fff;
+  border-left-color: colors.$sapphire-white;
 }
