--- a/src/components/05-components/screens/onboarding/_index.scss
+++ b/src/components/05-components/screens/onboarding/_index.scss
@@ -1,4 +1,7 @@
 /* OnBoarding */
+
+@use '~Settings/colors'as colors;
+
 .onboarding {
 
   -servicestudio-height: auto;
@@ -6,7 +9,7 @@
 }
 
 .onboarding:before {
-  background-color: #00BFA5;
+  background-color: colors.$regular-alpha;
   /*primary-color*/
   border-bottom-left-radius: 70%;
   border-bottom-right-radius: 70%;
@@ -96,13 +99,13 @@
 }
 
 .onboarding .carousel .carousel-dots-container .carousel-dot {
-  background-color: #c3c3c3;
+  background-color: colors.$mid-light-grey;
   height: 8px;
   width: 8px;
 }
 
 .onboarding .carousel .carousel-dots-container .carousel-dot.active {
-  background-color: #00BFA5;
+  background-color: colors.$regular-alpha;
   /* primary-color */
 }
 
