--- a/src/components/05-components/Common/bottom-bar/_index.scss
+++ b/src/components/05-components/Common/bottom-bar/_index.scss
@@ -1,11 +1,14 @@
 /* Bottom Bar */
+
+@use '~Settings/colors';
+
 .bottom-bar .bottom-bar-item-icon .icon {
   font-size: 18px;
 }
 
 .bottom-bar.wizard-steps {
-  background-color: #eee;
-  color: #000;
+  background-color: colors.$light-grey;
+  color: colors.$dark-grey;
   font-size: 14px;
   height: 48px;
   line-height: 28px;
@@ -19,7 +22,7 @@
 }
 
 .white-bottom-bar {
-  background: #fff;
+  background: colors.$sapphire-white;
   -webkit-box-shadow: 0 8px 8px rgba(0, 0, 0, .24), 0 0 8px rgba(0, 0, 0, .12);
   box-shadow: 0 8px 8px rgba(0, 0, 0, .24), 0 0 8px rgba(0, 0, 0, .12);
   line-height: 16px;
@@ -51,18 +54,18 @@
 
 /* Bottom bar */
 .bottom .appointments-list {
-  background-color: #f6f6f6;
+  background-color: colors.$sapphire-white;
 }
 
 .bottom .appointments-list,
 .bottom .detail-schedule,
 .bottom .detail-request {
-  background-color: #f6f6f6;
+  background-color: colors.$sapphire-white;
   padding: 20px 15px;
 }
 
 .bottom .appointments-list a {
-  color: #333;
+  color: colors.$dark-grey;
 }
 
 .bottom .btn,
