--- a/src/components/05-components/Common/layout/_layouts.scss
+++ b/src/components/05-components/Common/layout/_layouts.scss
@@ -1,17 +1,19 @@
+@use '~Settings/colors'as colors;
+
 .layout.blank.bg-colored .content {
-  background: #00bfa5;
+  background: colors.$regular-alpha;
   /*primary-color*/
-  color: #fff;
+  color: colors.$sapphire-white;
 }
 
 .layout.white-page .header {
-  background: #fff;
-  color: #00bfa5;
+  background: colors.$sapphire-white;
+  color: colors.$regular-alpha;
   /*primary-color*/
 }
 
 .layout.white-page .content,
 .layout.white-content .content,
 .layout.white-content .bottom {
-  background: #fff;
+  background: colors.$sapphire-white;
 }
