--- a/src/components/05-components/Common/layout/_menu.scss
+++ b/src/components/05-components/Common/layout/_menu.scss
@@ -21,7 +21,7 @@
 	opacity: 0.25;
 }
 
-.app-menu-links > a {
+.app-menu-links>a {
 	background-color: colors.$regular-eta;
 	padding-left: 40px !important;
 }
@@ -35,6 +35,7 @@
 		&:before {
 			left: 15px;
 		}
+
 		&:after {
 			left: 20px;
 		}
@@ -52,17 +53,20 @@
 		}
 	}
 }
+
 .submenu-items {
+
 	a,
 	a:link,
 	a:visited {
-		background-color: #f7f7f7;
+		background-color: colors.$sapphire-white;
 		border: 0;
-		border-bottom: 1px solid #efefef;
+		border-bottom: 1px solid colors.$light-grey;
 	}
+
 	a:first-child,
 	a:link:first-child,
 	a:visited:first-child {
-		border-top: 1px solid #efefef;
+		border-top: 1px solid colors.$light-grey;
 	}
 }
