--- a/src/components/05-components/SapphireCare_Patterns/calendar/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/calendar/_index.scss
@@ -1,5 +1,7 @@
+@use '~Settings/colors'as colors;
+
 .calendar {
-  background-color: #fff;
+  background-color: colors.$sapphire-white;
   border-radius: 4px;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .11);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .11);
@@ -7,7 +9,7 @@
 }
 
 .calendar .pika-title {
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid colors.$light-grey;
   display: block;
   position: relative;
   text-align: center;
@@ -15,14 +17,14 @@
 }
 
 .calendar .pika-title .pika-label {
-  color: #333;
+  color: colors.$dark-grey;
   display: inline-block;
   font-weight: 400;
 }
 
 .calendar .pika-title .pika-prev,
 .calendar .pika-title .pika-next {
-  color: #00BFA5;
+  color: colors.$regular-alpha;
   /*primary-color*/
   display: block;
   position: absolute;
@@ -65,7 +67,7 @@
 }
 
 .calendar table.pika-table thead tr th abbr {
-  color: #333;
+  color: colors.$dark-grey;
   display: inline-block;
   font-size: 0;
   text-decoration: none;
@@ -85,12 +87,12 @@
 }
 
 .calendar .is-today .pika-button {
-  color: #828282;
+  color: colors.$regular-grey;
 }
 
 .calendar .is-today.is-selected .pika-button,
 .calendar .is-selected .pika-button {
-  background-color: #00BFA5;
+  background-color: colors.$regular-alpha;
   /*primary-color*/
-  color: #fff;
+  color: colors.$sapphire-white;
 }
