--- a/src/components/05-components/SapphireCare_Patterns/card-image-top-actions-bottom/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-image-top-actions-bottom/_index.scss
@@ -1,6 +1,9 @@
 /* CardImageTopActionsBottom*/
+
+@use '~Settings/colors';
+
 .card-image-top {
-	background: #fff;
+	background: colors.$sapphire-white;
 	border-radius: 10px;
 	box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.14);
 	overflow: hidden;
@@ -12,11 +15,11 @@
 }
 
 .card-image-top-background-image:before {
-	background: #002b49;
+	background: colors.$sapphire-care-blue3;
 	/*secondary-color*/
-	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, #002b49 100%);
+	background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, colors.$sapphire-care-blue3 100%);
 	/*secondary-color*/
-	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #002b49 100%);
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, colors.$sapphire-care-blue3 100%);
 	/*secondary-color*/
 	bottom: 0;
 	content: '';
