--- a/src/components/05-components/SapphireCare_Patterns/card-two-cols-big/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-two-cols-big/_index.scss
@@ -1,7 +1,10 @@
 /*CardTwoColsBig*/
+
+@use '~Settings/colors'as colors;
+
 .card-two-cols-big {
-  background-color: #fff;
-  color: #333333;
+  background-color: colors.$sapphire-white;
+  color: colors.$dark-grey;
   display: table;
   padding: 20px 0;
   position: relative;
@@ -19,7 +22,7 @@
 }
 
 .card-two-cols-big-left.separator-border:after {
-  background-color: #dedede;
+  background-color: colors.$light-grey;
   bottom: 4px;
   content: "";
   display: block;
@@ -39,7 +42,7 @@
 
 .card-two-cols-big-left-icon,
 .card-two-cols-big-right-icon {
-  color: #00BFA5;
+  color: colors.$regular-alpha;
   /*primary-color*/
   font-size: 40px;
 }
