--- a/src/components/05-components/SapphireCare_Patterns/filter/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/filter/_index.scss
@@ -1,4 +1,6 @@
 /* Action Sheet - Sapphire Filter */
+@use '~Settings/colors';
+
 .sapphire-filter.action-sheet-container {
   -servicestudio-height: auto;
   -servicestudio-position: relative;
@@ -7,14 +9,14 @@
 }
 
 .sapphire-filter .action-sheet {
-  background-color: #fff;
+  background-color: colors.$sapphire-white;
   padding: 20px 0 10px;
 
   -servicestudio-position: relative;
 }
 
 .sapphire-filter .action-sheet--title {
-  color: #002b49;
+  color: colors.$sapphire-care-blue3;
   /*secondary-color*/
   font-size: 20px;
   font-weight: 700;
@@ -22,7 +24,7 @@
 }
 
 .sapphire-filter .action-sheet--closebtn {
-  color: #5c5c5c;
+  color: colors.$dark-grey;
   font-size: 24px;
   position: absolute;
   right: 18px;
@@ -35,7 +37,7 @@
 }
 
 .sapphire-filter .action-sheet--closebtn .icon {
-  color: #c5c5c5;
+  color: colors.$mid-dark-grey;
   font-size: 24px;
 }
 
