--- a/src/components/05-components/SapphireCare_Patterns/small-card/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/small-card/_index.scss
@@ -1,4 +1,7 @@
 /* Small Card */
+
+@use '~Settings/colors';
+
 .small-card {
   display: table;
   min-height: 65px;
@@ -16,7 +19,7 @@
 }
 
 .small-card.has-bg-color {
-  background-color: #fff;
+  background-color: colors.$sapphire-white;
 }
 
 .small-card.border-radius {
@@ -24,16 +27,16 @@
 }
 
 .small-card.border-bottom {
-  border-bottom: 1px solid #dedede;
+  border-bottom: 1px solid colors.$light-grey;
 }
 
 .small-card.border-top {
-  border-top: 1px solid #dedede;
+  border-top: 1px solid colors.$light-grey;
 }
 
 .small-card.box-shadow {
-  -webkit-box-shadow: 0 2px 12px 0 #e9e9e9;
-  box-shadow: 0 2px 12px 0 #e9e9e9;
+  -webkit-box-shadow: 0 2px 12px 0 colors.$light-grey;
+  box-shadow: 0 2px 12px 0 colors.$light-grey;
 }
 
 .small-card.has-padding-l-r {
@@ -52,7 +55,7 @@
 }
 
 .small-card.active {
-  background: #C2FBE3;
+  background: colors.$regular-zeta;
 }
 
 .small-card-col-left,
@@ -90,7 +93,7 @@
 }
 
 .small-card-col-left img {
-  border: 2px solid #dedede;
+  border: 2px solid colors.$light-grey;
   border-radius: 100%;
   height: auto;
   max-width: 60px;
@@ -148,7 +151,7 @@
 
 
 .campaign .small-card-col-left img {
-  border: 1px solid #dedede;
+  border: 1px solid colors.$light-grey;
   border-radius: 4px;
   height: 80px;
   max-width: 70px;
