--- a/src/components/05-components/SapphireCare_Patterns/user-card-with-bottom-actions/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/user-card-with-bottom-actions/_index.scss
@@ -1,6 +1,8 @@
 /*UserCardWithBottomActions*/
+@use '~Settings/colors';
+
 .user-card-bottom-actions-wrapper {
-  background: #fff;
+  background: colors.$sapphire-white;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
