--- a/src/components/05-components/Silk_Blocks/tabs/_index.scss
+++ b/src/components/05-components/Silk_Blocks/tabs/_index.scss
@@ -1,26 +1,27 @@
 /* Tabs */
+@use '~Settings/colors';
 
 .tabs-header {
-  background-color: #fff;
+  background-color: colors.$sapphire-white;
 }
 
 
 .tabs-header-tab {
-  color: #c4cccb;
+  color: colors.$mid-dark-grey;
   font-size: 16px;
   padding: 12px 20px 15px;
   text-transform: none;
 }
 
 .tabs-underline {
-  background-color: #00bfa5;
+  background-color: colors.$regular-alpha;
   /*primary-color*/
 }
 
 .tabs-header-tab.active {
-  border-bottom: 2px solid #00bfa5;
+  border-bottom: 2px solid colors.$regular-alpha;
   /*primary-color*/
-  color: #002b49;
+  color: colors.$sapphire-care-blue3;
   /*secondary-color*/
 }
 
