background-color class updated

--- a/src/components/05-components/Silk_Blocks/tooltip/_index.scss
+++ b/src/components/05-components/Silk_Blocks/tooltip/_index.scss
@@ -4,7 +4,7 @@
 .tooltip-wrapper {
   background-color: colors.$sapphire-white;
   box-shadow: 0 2px 24px 0 rgba(0, 0, 0, .32);
-  color: colors.$dark-;
+  color: colors.$dark-grey;
   font-size: 14px;
   padding: 5px 15px;
 }
